# LearnCode

Basic_Client/: CMakeLists.txt
Basic_Client/include/: IceClient.h  RabbitMQClient.h  Runner.h
Basic_Client/module/Ice/: Custom.cpp  Custom.h
Basic_Client/module/Protobuf/: message.pb.h  message.proto
Basic_Client/src/: RabbitMQClient.cpp  main.cpp
Basic_GoogleTest_Client/: CMakeLists.txt
Basic_GoogleTest_Client/module/Protobuf/: message.pb.cc
Basic_GoogleTest_Client/src/: IceClient.cpp  Runner.cpp
Basic_GoogleTest_Client/test/: CMakeLists.txt  test_ice_client.cpp  test_rabbitmq_client.cpp  test_runner.cpp
Basic_GoogleTest_Client/test/mocks/: MockIce.hpp
Basic_Server/: CMakeLists.txt
Basic_Server/include/: IceServer.h
Basic_Server/module/Ice/: Custom.ice  CustomImpl.cpp  CustomImpl.h
Basic_Server/src/: IceServer.cpp  main.cpp
DesignPattern/FactoryPattern/AbstractFactoryPattern/: main  main.cpp
DesignPattern/FactoryPattern/SimpleFactoryPattern/: main  main.cpp
DesignPattern/ObserverPattern/: main  main.cpp
DesignPattern/ResponsibilityChainModel/: main  main.cpp
DesignPattern/SingletonPattern/EagerSingleton/: main  main.cpp
DesignPattern/SingletonPattern/LazySingleton-C++11-local-static-variable/: main  main.cpp
DesignPattern/SingletonPattern/LazySingleton-non-thread-safe/: main  main.cpp
DesignPattern/SingletonPattern/LazySingleton-thread-safe-lock-version/: main  main.cpp
DesignPattern/StrategyPattern/: main  main.cpp
DesignPattern/TemplateMethodPattern/: main  main.cpp
EmailSystem/: CMakeLists.txt
EmailSystem/src/: main.cpp
Load_Lua_Redis/: Load_Lua_Redis.pro  main.cpp  script.lua
ModernCpp/part0/: main  main.cpp
ModernCpp/part1/: main  main.cpp
Test/Test0/: CMakeLists.txt
Test/Test0/include/: global.h  math_utils.h
Test/Test0/src/: math_utils.cpp  string_utils.cpp
Test/Test0/test/: test_contains.cpp  test_math.cpp  test_string.cpp
Test/Test11/: CMakeLists.txt
Test/Test11/include/: math_utils.h  string_utils.h
Test/Test11/src/: math_utils.cpp  string_utils.cpp
Test/Test11/test/: test_math.cpp  test_string.cpp
